Fixed most helpful answer tag not showing

--- a/src/styles/sass/base/globals.scss
+++ b/src/styles/sass/base/globals.scss
@@ -12,11 +12,11 @@ html {
 
   // Small desktops
   @media screen and (min-width: 75em) {
-    font-size: 71%;
+    font-size: 68%;
   }
   // Large Desktops
   @media screen and (min-width: 100em) {
-    font-size: 76%;
+    font-size: 73%;
   }
   // Portrait
   @media screen and (max-width: 56.25em) {
