--- a/src/styles/sass/components/_button.scss
+++ b/src/styles/sass/components/_button.scss
@@ -4,7 +4,7 @@
   font-size: 1.3rem;
   border-color: transparent;
   min-width: max-content;
-  padding: 0.7em 1em;
+  padding: 0.55em 0.9em;
   border-radius: 4px;
   text-align: center;
   cursor: pointer;
